crates/diffguard-core/tests/snapshots/test_checkstyle__checkstyle_empty.snap
---
source: crates/diffguard-core/tests/test_checkstyle.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<checkstyle version="5.0">
</checkstyle>
