crates/diffguard-core/tests/snapshots/test_checkstyle__checkstyle_multiple_same_file.snap
---
source: crates/diffguard-core/tests/test_checkstyle.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<checkstyle version="5.0">
  <file name="src/lib.rs">
    <error line="15" column="20" severity="error" message="Avoid unwrap" source="rust.no_unwrap"/>
    <error line="42" column="3" severity="warning" message="Remove dbg!" source="rust.no_dbg"/>
  </file>
</checkstyle>
