crates/diffguard-core/tests/snapshots/test_checkstyle__checkstyle_special_chars.snap
---
source: crates/diffguard-core/tests/test_checkstyle.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<checkstyle version="5.0">
  <file name="src/special&apos;.rs">
    <error line="1" severity="error" message="Message with &lt;special&gt; &amp; &quot;chars&quot;" source="test&amp;rule"/>
  </file>
</checkstyle>
